libs/pavex_cli/tests/ui_tests/the_path_for_generic_arguments_must_be_absolute/expectations/stderr.txt
Error: 
  × `String` is not a fully-qualified import path.
    ╭─[src/lib.rs:14:1]
 14 │     AppBlueprint::new()
 15 │         .constructor(f!(crate::new_logger::<String>), Lifecycle::Singleton)
    ·                      ───────────────┬───────────────
    ·                                     ╰── The invalid import path was registered here
 16 │         .route(f!(crate::handler::<std::string::String>), "/home")
    ╰────
  help: If it is a local import, the path must start with `crate::`.
        If it is an import from a dependency, the path must start with the
        dependency name (e.g. `dependency::`).